--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AoC2020)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(AoC2020 main.cpp Days/Day1.cpp Days/Day1.h Days/Day2.cpp Days/Day2.h)
+add_executable(AoC2020 main.cpp Days/Day1.cpp Days/Day1.h Days/Day2.cpp Days/Day2.h Days/Day3.cpp Days/Day3.h)
