--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AoC2020)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(AoC2020 main.cpp Days/Day1.cpp Days/Day1.h Days/Day2.cpp Days/Day2.h Days/Day3.cpp Days/Day3.h Days/Day4.cpp Days/Day4.h Days/Day5.cpp Days/Day5.h Days/Day6.cpp Days/Day6.h Days/Day7.cpp Days/Day7.h Days/Day8.cpp Days/Day8.h Days/Day9.cpp Days/Day9.h Days/Day10.cpp Days/Day10.h)
+add_executable(AoC2020 main.cpp Days/Day1.cpp Days/Day1.h Days/Day2.cpp Days/Day2.h Days/Day3.cpp Days/Day3.h Days/Day4.cpp Days/Day4.h Days/Day5.cpp Days/Day5.h Days/Day6.cpp Days/Day6.h Days/Day7.cpp Days/Day7.h Days/Day8.cpp Days/Day8.h Days/Day9.cpp Days/Day9.h Days/Day10.cpp Days/Day10.h Days/Day11.cpp Days/Day11.h)
